--- a/tutorials/bridges.adoc
+++ b/tutorials/bridges.adoc
@@ -78,6 +78,7 @@ Ohodnocení mostu je vždy vidět na jeho horní straně.
 
 NOTE: Pilíře mostu se musí udržet na tiskové desce.
 Použijte vhodné techniky, které znáte z kapitoly xref:slicing.adoc#structs[slicing].
+V případě potřeby aplikujte xref:printing.adoc#abs-juice[ABS Juice].
 
 WARNING: Zkontrolujte si, že pilíře nejsou plné, ale mají infill.
 V nastavení případně snižte hodnotu _Solid infill threshold area_.
